# nanoid-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ci/: azure-pipelines.yml
examples/: generate_id.cpp  generate_id_of_size.cpp  generate_id_with_custom_alphabet.cpp
src/: CMakeLists.txt
src/nanoid/: nanoid.hpp  xor_shift_generator.h
tests/: CMakeLists.txt  nanoid_tests.cpp
